--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,15 @@
             <version>2.0.17</version>
         </dependency>
 
-        <!-- Logback -->
+        <!-- Logback Implementation -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
+            <version>1.5.18</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <version>1.5.18</version>
         </dependency>
 
