phase 1 of logger overtake

--- a/src/main/resources/client/application.properties.template
+++ b/src/main/resources/client/application.properties.template
@@ -13,3 +13,6 @@ ssl.password=changeit
 # Valid levels: TRACE, DEBUG, INFO, WARN, ERROR
 logging.level=INFO
 logging.file=logs/client.log
+
+# TURN configuration
+metered.url=
